@@ -1,2 +1,10 @@
 # Project1
 
+Uses:<br/>
+&nbsp;&nbsp;&nbsp;     <a href="https://www.oracle.com/technetwork/java/javase/14-relnote-issues-5809570.html">JDK 14.0.1</a><br/>
+&nbsp;&nbsp;&nbsp;     <a href="https://openjfx.io/">JFX 14.0.1</a><br/>
+&nbsp;&nbsp;&nbsp;     <a href="https://github.com/junit-team/junit4/wiki/Download-and-Install">JUnit 4.13</a>
+<br/><br/>
+Run configuration:<br/>
+&nbsp;&nbsp;&nbsp; Main class: sample.inlogScreen.Main<br/>
+&nbsp;&nbsp;&nbsp; VM option --module-path "\path\to\javafx-sdk-14\lib" --add-modules javafx.controls,javafx.fxml,javafx.media
